Sync dev to main (#44)
* Mba 17 crear repositorios para gestionar eventos (#9)

* Creo repositorio y builder con constructores para evento

* Creo repositorio y builder con constructores para evento

* Agrego funciones findByTitle y findByTitleContains

* Funcion FindBy generica que toma lambda

* Tests de EventRepository

* Mas tests

* Endpoint post eventos

* Comentarios

* Creo endpoints de busqueda de eventos

* Doy formato a EventController y EventService

* Fix: Arreglo serializacion de Categorias y Tags poniendo setters, getters y constructores sin argumentos

* Fix obtener hechos con filtros

* Fix obtener hecho con un ID particular

* Agrego criterios de categorias y tags

* Agrego comparacion por precio

* Agrego mas tests

* Agrego comprobacion de category null para evitar NullPointerException

* Corrijo tilde en Música en el test para que funcione correctamente

* Creo dockerfile, actualizo pom.xml para que cree un .jar ejecutable por si solo y dejo instrucciones basicas de como ejecutarlo

* Registra un usuario a un evento o lo deja en waitlist

* Fixes para registro de cuenta en evento y creacion de evento para prueba

* base de US

* Agrego estado en registration y modifico registerParticipantToEvent en EventService con validaciones

* Agrego getRegistrations en AccountController

* Hago que al registrarse un evento, tambien se pueda introducir el usuario que lo organizo

* USER HISTORY 16

Historia de usuario 16

* Agrego modificaciones para ver eventos como organizador e inscripciones como participante

* Cancelar Inscripcion por el participante

* Liberar lugar e inscripcion automatica

* Cambio de nombre de User a Account. Rutas y variables

* Cambio de nombre de User a Account. Rutas y variables

* Comento el endpoint para obtener todas la registrations en RegistrationController

* Fecha y Hora al momento de crear una Registration

* listo tests

* Modificaciones para acoplar el codigo mergeado

* Modificaciones para acoplar el codigo mergeado

